--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,61 +2,46 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background-color: rgb(53, 55, 80); */
   height: 100%;
   position: relative;
-  overflow:hidden;
-  background: #C33764;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #1D2671, #C33764);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #1D2671, #C33764); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  overflow: hidden;
 
-
+  /* https://uigradients.com/#Dania */
+  background: #be93c5; /* fallback for old browsers */
+  background: linear-gradient(to right, #be93c5, #7bc6cc);
 }
 
-/* .App::after{
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  content:"";
-  filter: blur(15px);
-  top:0;
-  left:0;
-  background: url("https://images.unsplash.com/photo-1571850125649-3fdf08431125");
-  background-size: cover;
-  background-position: center;
-  z-index:-1;
-  transform: scale(1.1);
-} */
-
 .displayWrapper {
-  margin-top: 5%;
+  margin-top: 2em;
   background-color: white;
-  width: 28em;
+  width: 25em;
   border-radius: 5px;
-  padding:2%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 0 2em 0;
 }
 
 .displayWrapper h2 {
-  font-size: 170%;
+  font-size: 1.9em;
 }
 
 
 .display{
   height: 2em;
   font-family: Musiqwik;
-  font-size: 8rem;
+  font-size: 7rem;
   display: flex;
   justify-content: center;
   align-items: center;
   white-space: nowrap;
+  letter-spacing: -3px; /* To fix the gap between the notes */
+  font-weight: normal;
 }
 
 .keyboard {
   display: flex;
-  margin: 5% 0 0 0;
+  margin-top: 0.5em;
   justify-content: center;
   align-items: center;
   /* background: #222;
@@ -71,8 +56,9 @@
 /* White keys */
 .keyboard div {
   height: 16em;
-  width: 4em;
-  padding: 3%;
+  width: 3.5em;
+  min-width: 3em;
+  padding: 1em;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -86,10 +72,8 @@
 }
 
 .keyboard div p {
-  font-size: 110%;
-  font-weight: 500;
+  font-size: 1.2em;
 }
-
 
 /* Black keys */
 .keyboard div:active{
